[package]
name = "arrow-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
uuid = { version = "1", features = ["v3"] }
flate2 = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"

