[package]
name = "mc-server-ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-protocol = { git = "https://gitlab.com/arrow-rs/arrow-protocol" }
clap = { version = "3", features = ["derive"] }
bytes = "1"