[package]
name = "arrow-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

bytes = "1"
uuid = { version = "1", features = ["v3"] }
flate2 = "1"
tokio-util = { version = "0.7", features = ["codec"]}

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
hematite-nbt = "0.5"

rsa = "0.7.0-pre"
rand = "0.8"
cfb8 = "0.8"
aes = "0.8"

[dev-dependencies]
# Needed for the mc-server-ping example
clap = { version = "3", features = ["derive"] }

[[example]]
name = "mc-server-ping"
