[package]
name = "arrow-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"

bytes = "1"
uuid = { version = "1", features = ["v3"] }
flate2 = "1"
bitflags = "1.3"
tokio-util = { version = "0.7", features = ["codec"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
hematite-nbt = "0.5"

rsa = "0.7.0-pre"
rand = "0.8"
cfb8 = "0.8"
aes = "0.8"

[dev-dependencies]
# Needed for the mc-server-ping example
clap = { version = "3", features = ["derive"] }
# Needed for the login-server example
tokio = { version = "1.20", default-features = false, features = [
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
] }
futures-util = { version = "0.3", features = ["sink"] }
reqwest = { version = "0.11.11", features = ["json"] }
sha1 = "0.10.1"
num-bigint = "0.4"
serde_json = "1"

[[example]]
name = "mc-server-ping"

[[example]]
name = "login-server"
